Add trails api, trails controller and view

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -4,7 +4,9 @@
   <p>Congratulations! You can visit the <a href="/secret">secret page</a></p>
 
 <% else %>
-  <h1>Register as a new user or log in.</h1>
+  <h1>Welcome to MyHike.</h1>
+  <h2>Find a trail nearby or anywhere you would like to hike.</h2>
+  <h3>Register as a new user or log in.</h3>
 
   <p>Sign in <a href="/sessions/new">here</a></p>
   <p>Register as a new user <a href="/users/new">here</a></p>
