Add css to site

--- a/app/views/partials/_header.erb
+++ b/app/views/partials/_header.erb
@@ -1,11 +1,15 @@
+<div id="header">
 <% if session[:user_id] != nil %>
   <a href="/">home</a>
+  <p></p>
   <form method="post" action="/sessions/:id">
     <input type="hidden" name="_method" value='delete'>
-    <input type="submit" value="log out">
+    <input class="button" type="submit" value="log out">
   </form>
 <% else %>
   <a href="/users/new">Register</a>
   <a href="/sessions/new">Login</a>
   <a href="/">Home</a>
 <%end%>
+
+</div>
