--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,4 +1,15 @@
-<%= erb :'/partials/_header', layout: false %>
-<h1>Hi, <%= @user.full_name %>!</h1>
-<h2>Here is your user show page</h2>
 
+<br>
+<br>
+<h1>Hi, <%= @user.full_name %>!</h1>
+<h1>Welcome to MyHike.</h1>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<p></p>
+<h2>Find a trail nearby or anywhere you would like to hike.</h2>
+
+<a href="/trails">Click here to find a trail.</a>
