--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,7 +1,17 @@
-<%= erb :'/partials/_header', layout: false %>
 <% if @user %>
-  <h1>Hi, <%= @user.full_name %>!</h1>
-  <p>Congratulations! You can visit the <a href="/secret">secret page</a></p>
+
+
+  <br>
+  <br>
+  <br>
+  <h1 id="hello">Hi, <%= @user.full_name %>!</h1>
+
+  <br>
+  <br>
+  <br>
+  <h1 id="welcome">Welcome to MyHike.</h1>
+  <a href="/trails">Click here to find a trail.</a>
+
 
 <% else %>
   <h1>Welcome to MyHike.</h1>
